--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ body {
     border: none;
     border-radius: 25px;
     font-size: 0.95rem;
-    color: var(--text-color);
+    color: #2c347b;
     background-color: var(--not-started-bg);
     cursor: pointer;
     transition: background-color 0.2s, box-shadow 0.2s;
@@ -195,7 +195,7 @@ body {
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
 }
 #date-display:hover {
-    background-color: var(--not-started-text);
+    background-color: #2c347b;
     color: white;
 }
 
@@ -302,7 +302,8 @@ body {
 
 
 .calendar-grid .day:hover {
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: #2c347bad;
+    color: #ffff;
 }
 
 .day.today {
